[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "multi-agent-research-assistant"
version = "0.1.0"
description = "LangGraph multi-agent research assistant (Planner / Researcher / Critic / Writer) with DuckDuckGo search and SSE streaming."
readme = "../README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Pankaj Gupta" }]
keywords = ["langgraph", "agents", "fastapi", "streamlit", "duckduckgo"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    # Orchestration
    "langgraph>=0.2.50",
    "langchain-core>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.0",

    # Structured output / config
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # Web search (free, no API key)
    "duckduckgo-search>=6.3.0",

    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",

    # Utilities
    "tenacity>=9.0.0",
]

[project.urls]
Homepage = "https://github.com/pankajgupta/multi-agent-research-assistant"
Issues = "https://github.com/pankajgupta/multi-agent-research-assistant/issues"

[project.scripts]
mara-api = "app.main:run"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.setuptools.package-data]
"app.prompts" = ["*.md"]
